Fix z-index for filter so it doesnt overlap the sticky header (#486)

--- a/assets/base.css
+++ b/assets/base.css
@@ -686,6 +686,12 @@ summary::-webkit-details-marker {
   z-index: 100;
 }
 
+@media screen and (min-width: 750px) {
+  .disclosure-has-popup[open] > summary + * {
+    z-index: 2;
+  }
+}
+
 /* base-focus */
 /*
   Focus ring - default (with offset)
@@ -1482,7 +1488,7 @@ details[open] > .share-button__fallback {
 .field__input:-webkit-autofill ~ .field__button,
 .field__input:-webkit-autofill ~ .field__label,
 .customer .field input:-webkit-autofill ~ label {
-  color: rgb(0,0,0);
+  color: rgb(0, 0, 0);
 }
 
 /* Text area */
